force-app/main/default/objects/Part_Request__c/Part_Request__c.object-meta.xml
<CustomObject>
    <label>Part Request</label>
    <nameField>
        <label>Part Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Part Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>