force-app/main/default/objects/Part_Request__c/fields/Repair_Part__c.field-meta.xml
<CustomField>
    <fullName>Repair_Part__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Repair Part</label>
    <referenceTo>RepairPart__c</referenceTo>
    <relationshipLabel>Part Requests</relationshipLabel>
    <relationshipName>Part_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>